crates/serde-feather/tests/ui/tuple_struct.rs
use serde_feather::FeatherSerialize;

#[derive(FeatherSerialize)]
struct TupleModel(u8);

fn main() {}
